# node_ipc

./: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ipc.c  ipc.rs  lib.rs  main.js  sb.rs  sem_test.js  shm_test.js  test.js  test.rs  test_mq.js  test_sem.js  test_shm.js  wsc.js  wsd.js
