[package]
edition = "2021"
name = "node_ipc"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
]}

napi-derive = "2.11.0"
tokio = { version = "1.20.0", features = ["full"] }
parity-tokio-ipc = "0.9.0"
futures = "0.3"
lazy_static = "1.4.0"

bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }

winapi = { version = "0.3.8", features = ["memoryapi", "handleapi", "winbase", "minwindef", "namedpipeapi", "winnt", "minwinbase", "synchapi", "winerror"] }
widestring = "*"

log = "0.4"
simplelog = "0.7"
#windows = { version = "0.21.0", features = ["win32-process"] }

libc = "0.2"
regex = "*"


[build-dependencies]
napi-build = "2.0.1"
cc = "1.0"


[profile.release]
lto = true
